parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    QUOTE

Grammar

Rule 0     S' -> statementTop
Rule 1     statementTop -> END
Rule 2     statementTop -> statement
Rule 3     statement -> declaration statementTop
Rule 4     statement -> expression statementTop
Rule 5     statement -> IfThenElse statementTop
Rule 6     statement -> AssignmentHead statementTop
Rule 7     statement -> WhileLoop statementTop
Rule 8     statement -> ForLoop statementTop
Rule 9     statement -> DoWhileLoop statementTop
Rule 10    statement -> unionAdd statementTop
Rule 11    statement -> unionKeys statementTop
Rule 12    statement -> typeCastToInt statementTop
Rule 13    statement -> typecastToFloat statementTop
Rule 14    statement -> FunctionDefinition statementTop
Rule 15    statement -> FunctionCall statementTop
Rule 16    statement -> returnDec statementTop
Rule 17    statement -> stringOpStatement statementTop
Rule 18    statement -> listOpStatement statementTop
Rule 19    statement -> READ LPAREN IDENTIFIER RPAREN SEMICOLON statementTop
Rule 20    statement -> PRINT LPAREN content RPAREN SEMICOLON statementTop
Rule 21    statement1 -> declaration
Rule 22    statement1 -> expression
Rule 23    statement1 -> IfThenElse
Rule 24    statement1 -> AssignmentHead
Rule 25    statement1 -> WhileLoop
Rule 26    statement1 -> ForLoop
Rule 27    statement1 -> DoWhileLoop
Rule 28    statement1 -> unionAdd
Rule 29    statement1 -> unionKeys
Rule 30    statement1 -> typeCastToInt
Rule 31    statement1 -> typecastToFloat
Rule 32    statement1 -> FunctionDefinition
Rule 33    statement1 -> FunctionCall
Rule 34    statement1 -> returnDec
Rule 35    statement1 -> stringOpStatement
Rule 36    statement1 -> listOpStatement statementTop
Rule 37    statement1 -> READ LPAREN IDENTIFIER RPAREN SEMICOLON
Rule 38    statement1 -> PRINT LPAREN content RPAREN SEMICOLON
Rule 39    content -> toPrint morePrint
Rule 40    morePrint -> PLUS toPrint morePrint
Rule 41    morePrint -> EMPTY
Rule 42    toPrint -> STRINGVALUE
Rule 43    toPrint -> CONSTANT
Rule 44    toPrint -> IDENTIFIER
Rule 45    declaration -> identifierDeclaration
Rule 46    declaration -> listDec
Rule 47    declaration -> unionDec
Rule 48    identifierDeclaration -> BAR dataType IDENTIFIER BAR SEMICOLON
Rule 49    identifierDeclaration -> BAR dataType IDENTIFIER LBRACK CONSTANT RBRACK BAR SEMICOLON
Rule 50    identifierDeclaration -> BAR dataType IDENTIFIER LBRACK CONSTANT RBRACK EQUAL expression BAR SEMICOLON
Rule 51    identifierDeclaration -> BAR dataType IDENTIFIER EQUAL expression BAR SEMICOLON
Rule 52    dataType -> INT
Rule 53    dataType -> BOOLEAN
Rule 54    dataType -> FLOAT
Rule 55    stringOpStatement -> IDENTIFIER stringOp LPAREN STRING RPAREN SEMICOLON
Rule 56    stringOpStatement -> IDENTIFIER stringOp LPAREN IDENTIFIER RPAREN SEMICOLON
Rule 57    listOpStatement -> IDENTIFIER INSERT LPAREN CONSTANT COMMA validListUnionValues RPAREN SEMICOLON
Rule 58    listOpStatement -> IDENTIFIER POP LPAREN listOpChoice RPAREN SEMICOLON
Rule 59    listOpChoice -> CONSTANT
Rule 60    listOpChoice -> EMPTY
Rule 61    stringOp -> SPLIT
Rule 62    stringOp -> STRIP
Rule 63    stringOp -> CONCAT
Rule 64    stringOp -> COPY
Rule 65    listDec -> IDENTIFIER EQUAL list SEMICOLON
Rule 66    list -> LBRACK listElem RBRACK
Rule 67    listElem -> validListUnionValues
Rule 68    listElem -> validListUnionValues COMMA listElem
Rule 69    listElem -> EMPTY
Rule 70    listEval -> IDENTIFIER LBRACK CONSTANT RBRACK
Rule 71    unionDec -> IDENTIFIER EQUAL union SEMICOLON
Rule 72    union -> LCURLY unionElement RCURLY
Rule 73    unionElement -> STRING EQUAL validListUnionValues
Rule 74    unionElement -> STRING EQUAL validListUnionValues COMMA unionElement
Rule 75    unionElement -> EMPTY
Rule 76    unionAdd -> IDENTIFIER LBRACK STRINGVALUE RBRACK EQUAL validListUnionValues SEMICOLON
Rule 77    validListUnionValues -> CONSTANT
Rule 78    validListUnionValues -> FLOATVALUE
Rule 79    validListUnionValues -> booleanValue
Rule 80    validListUnionValues -> STRINGVALUE
Rule 81    unionKeys -> IDENTIFIER KEYS SEMICOLON
Rule 82    unionEval -> IDENTIFIER ARROW STRING
Rule 83    typeCastToInt -> TC_INT IDENTIFIER SEMICOLON
Rule 84    typecastToFloat -> TC_FLOAT IDENTIFIER SEMICOLON
Rule 85    WhileLoop -> WHILE Condition COLON Body
Rule 86    Body -> statementMore
Rule 87    statementMore -> statementMoreCont
Rule 88    statementMore -> END
Rule 89    statementMoreCont -> statement1 statementMore
Rule 90    ForLoop -> for LPAREN AssignmentHead Condition Increment RPAREN Body
Rule 91    DoWhileLoop -> DO COLON Body WHILE Condition SEMICOLON
Rule 92    Increment -> SEMICOLON Operand Options
Rule 93    Options -> Iterator
Rule 94    Options -> AssignmentOperator Operand
Rule 95    IfThenElse -> IF Condition COLON Body addElif
Rule 96    addElif -> addElif2
Rule 97    addElif -> FI
Rule 98    addElif -> ELSE COLON Body
Rule 99    addElif2 -> elifClause addElif
Rule 100   elifClause -> ELIF Condition COLON Body
Rule 101   Condition -> RelationExpression
Rule 102   Condition -> LPAREN Condition Compound Condition RPAREN
Rule 103   Condition -> LPAREN NOT Condition RPAREN
Rule 104   Operand -> IDENTIFIER
Rule 105   Operand -> CONSTANT
Rule 106   Operand -> booleanValue
Rule 107   Compound -> AND
Rule 108   Compound -> OR
Rule 109   Iterator -> PLUSPLUS
Rule 110   Iterator -> MINUSMINUS
Rule 111   Iterator -> EMPTY
Rule 112   AssignmentHead -> BAR IDENTIFIER AssignmentOption BAR SEMICOLON
Rule 113   AssignmentOption -> EQUAL AssignmentOptionChain
Rule 114   AssignmentOption -> AssignmentOperator AssignmentOptions2
Rule 115   AssignmentOptions2 -> CONSTANT
Rule 116   AssignmentOptions2 -> ArithmeticExpression
Rule 117   AssignmentOptionChain -> listEval
Rule 118   AssignmentOptionChain -> Function
Rule 119   AssignmentOptionChain -> unionEval
Rule 120   AssignmentOptionChain -> AssignmentOptions2
Rule 121   AssignmentOperator -> PLUSEQUAL
Rule 122   AssignmentOperator -> MINUSEQUAL
Rule 123   AssignmentOperator -> MULTEQUAL
Rule 124   AssignmentOperator -> DIVEQUAL
Rule 125   AssignmentOperator -> MODEQUAL
Rule 126   expression -> ArithmeticExpression
Rule 127   expression -> listEval
Rule 128   expression -> list
Rule 129   expression -> union
Rule 130   expression -> RelationExpression
Rule 131   RelationExpression -> LPAREN Operand RelationOperator Operand RPAREN
Rule 132   ArithmeticExpression -> LESSTHAN Operand ArithmeticOperator Operand GREATERTHAN
Rule 133   ArithmeticOperator -> PLUS
Rule 134   ArithmeticOperator -> MINUS
Rule 135   ArithmeticOperator -> MULT
Rule 136   ArithmeticOperator -> DIV
Rule 137   ArithmeticOperator -> MOD
Rule 138   RelationOperator -> EQUALEQUAL
Rule 139   RelationOperator -> EQUAL
Rule 140   RelationOperator -> LESSTHAN
Rule 141   RelationOperator -> GREATERTHAN
Rule 142   RelationOperator -> GREATEREQ
Rule 143   RelationOperator -> LESSEREQ
Rule 144   RelationOperator -> NOTEQ
Rule 145   FunctionDefinition -> dataType Function COLON Body
Rule 146   Function -> IDENTIFIER LPAREN Parameter RPAREN
Rule 147   Parameter -> dataType IDENTIFIER
Rule 148   Parameter -> dataType IDENTIFIER COMMA Parameter
Rule 149   Parameter -> EMPTY
Rule 150   FunctionCall -> IDENTIFIER LPAREN FunctionCallParameter RPAREN SEMICOLON
Rule 151   FunctionCallParameter -> IDENTIFIER
Rule 152   FunctionCallParameter -> IDENTIFIER COMMA FunctionCallParameter
Rule 153   FunctionCallParameter -> EMPTY
Rule 154   returnDec -> RETURN CONSTANT SEMICOLON
Rule 155   returnDec -> RETURN IDENTIFIER SEMICOLON
Rule 156   returnDec -> RETURN expression SEMICOLON
Rule 157   booleanValue -> TRUE
Rule 158   booleanValue -> FALSE

Terminals, with rules where they appear

AND                  : 107
ARROW                : 82
BAR                  : 48 48 49 49 50 50 51 51 112 112
BOOLEAN              : 53
COLON                : 85 91 95 98 100 145
COMMA                : 57 68 74 148 152
COMMENT              : 
CONCAT               : 63
CONSTANT             : 43 49 50 57 59 70 77 105 115 154
COPY                 : 64
DIV                  : 136
DIVEQUAL             : 124
DO                   : 91
ELIF                 : 100
ELSE                 : 98
EMPTY                : 41 60 69 75 111 149 153
END                  : 1 88
EQUAL                : 50 51 65 71 73 74 76 113 139
EQUALEQUAL           : 138
FALSE                : 158
FI                   : 97
FLOAT                : 54
FLOATVALUE           : 78
GREATEREQ            : 142
GREATERTHAN          : 132 141
IDENTIFIER           : 19 37 44 48 49 50 51 55 56 56 57 58 65 70 71 76 81 82 83 84 104 112 146 147 148 150 151 152 155
IF                   : 95
INSERT               : 57
INT                  : 52
KEYS                 : 81
LBRACK               : 49 50 66 70 76
LCURLY               : 72
LESSEREQ             : 143
LESSTHAN             : 132 140
LPAREN               : 19 20 37 38 55 56 57 58 90 102 103 131 146 150
MINUS                : 134
MINUSEQUAL           : 122
MINUSMINUS           : 110
MOD                  : 137
MODEQUAL             : 125
MULT                 : 135
MULTEQUAL            : 123
NOT                  : 103
NOTEQ                : 144
OR                   : 108
PLUS                 : 40 133
PLUSEQUAL            : 121
PLUSPLUS             : 109
POP                  : 58
PRINT                : 20 38
QUOTE                : 
RBRACK               : 49 50 66 70 76
RCURLY               : 72
READ                 : 19 37
RETURN               : 154 155 156
RPAREN               : 19 20 37 38 55 56 57 58 90 102 103 131 146 150
SEMICOLON            : 19 20 37 38 48 49 50 51 55 56 57 58 65 71 76 81 83 84 91 92 112 150 154 155 156
SPLIT                : 61
STRING               : 55 73 74 82
STRINGVALUE          : 42 76 80
STRIP                : 62
TC_FLOAT             : 84
TC_INT               : 83
TRUE                 : 157
WHILE                : 85 91
error                : 
for                  : 90

Nonterminals, with rules where they appear

ArithmeticExpression : 116 126
ArithmeticOperator   : 132
AssignmentHead       : 6 24 90
AssignmentOperator   : 94 114
AssignmentOption     : 112
AssignmentOptionChain : 113
AssignmentOptions2   : 114 120
Body                 : 85 90 91 95 98 100 145
Compound             : 102
Condition            : 85 90 91 95 100 102 102 103
DoWhileLoop          : 9 27
ForLoop              : 8 26
Function             : 118 145
FunctionCall         : 15 33
FunctionCallParameter : 150 152
FunctionDefinition   : 14 32
IfThenElse           : 5 23
Increment            : 90
Iterator             : 93
Operand              : 92 94 131 131 132 132
Options              : 92
Parameter            : 146 148
RelationExpression   : 101 130
RelationOperator     : 131
WhileLoop            : 7 25
addElif              : 95 99
addElif2             : 96
booleanValue         : 79 106
content              : 20 38
dataType             : 48 49 50 51 145 147 148
declaration          : 3 21
elifClause           : 99
expression           : 4 22 50 51 156
identifierDeclaration : 45
list                 : 65 128
listDec              : 46
listElem             : 66 68
listEval             : 117 127
listOpChoice         : 58
listOpStatement      : 18 36
morePrint            : 39 40
returnDec            : 16 34
statement            : 2
statement1           : 89
statementMore        : 86 89
statementMoreCont    : 87
statementTop         : 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 36 0
stringOp             : 55 56
stringOpStatement    : 17 35
toPrint              : 39 40
typeCastToInt        : 12 30
typecastToFloat      : 13 31
union                : 71 129
unionAdd             : 10 28
unionDec             : 47
unionElement         : 72 74
unionEval            : 119
unionKeys            : 11 29
validListUnionValues : 57 67 68 73 74 76

Parsing method: LALR

state 0

    (0) S' -> . statementTop
    (1) statementTop -> . END
    (2) statementTop -> . statement
    (3) statement -> . declaration statementTop
    (4) statement -> . expression statementTop
    (5) statement -> . IfThenElse statementTop
    (6) statement -> . AssignmentHead statementTop
    (7) statement -> . WhileLoop statementTop
    (8) statement -> . ForLoop statementTop
    (9) statement -> . DoWhileLoop statementTop
    (10) statement -> . unionAdd statementTop
    (11) statement -> . unionKeys statementTop
    (12) statement -> . typeCastToInt statementTop
    (13) statement -> . typecastToFloat statementTop
    (14) statement -> . FunctionDefinition statementTop
    (15) statement -> . FunctionCall statementTop
    (16) statement -> . returnDec statementTop
    (17) statement -> . stringOpStatement statementTop
    (18) statement -> . listOpStatement statementTop
    (19) statement -> . READ LPAREN IDENTIFIER RPAREN SEMICOLON statementTop
    (20) statement -> . PRINT LPAREN content RPAREN SEMICOLON statementTop
    (45) declaration -> . identifierDeclaration
    (46) declaration -> . listDec
    (47) declaration -> . unionDec
    (126) expression -> . ArithmeticExpression
    (127) expression -> . listEval
    (128) expression -> . list
    (129) expression -> . union
    (130) expression -> . RelationExpression
    (95) IfThenElse -> . IF Condition COLON Body addElif
    (112) AssignmentHead -> . BAR IDENTIFIER AssignmentOption BAR SEMICOLON
    (85) WhileLoop -> . WHILE Condition COLON Body
    (90) ForLoop -> . for LPAREN AssignmentHead Condition Increment RPAREN Body
    (91) DoWhileLoop -> . DO COLON Body WHILE Condition SEMICOLON
    (76) unionAdd -> . IDENTIFIER LBRACK STRINGVALUE RBRACK EQUAL validListUnionValues SEMICOLON
    (81) unionKeys -> . IDENTIFIER KEYS SEMICOLON
    (83) typeCastToInt -> . TC_INT IDENTIFIER SEMICOLON
    (84) typecastToFloat -> . TC_FLOAT IDENTIFIER SEMICOLON
    (145) FunctionDefinition -> . dataType Function COLON Body
    (150) FunctionCall -> . IDENTIFIER LPAREN FunctionCallParameter RPAREN SEMICOLON
    (154) returnDec -> . RETURN CONSTANT SEMICOLON
    (155) returnDec -> . RETURN IDENTIFIER SEMICOLON
    (156) returnDec -> . RETURN expression SEMICOLON
    (55) stringOpStatement -> . IDENTIFIER stringOp LPAREN STRING RPAREN SEMICOLON
    (56) stringOpStatement -> . IDENTIFIER stringOp LPAREN IDENTIFIER RPAREN SEMICOLON
    (57) listOpStatement -> . IDENTIFIER INSERT LPAREN CONSTANT COMMA validListUnionValues RPAREN SEMICOLON
    (58) listOpStatement -> . IDENTIFIER POP LPAREN listOpChoice RPAREN SEMICOLON
    (48) identifierDeclaration -> . BAR dataType IDENTIFIER BAR SEMICOLON
    (49) identifierDeclaration -> . BAR dataType IDENTIFIER LBRACK CONSTANT RBRACK BAR SEMICOLON
    (50) identifierDeclaration -> . BAR dataType IDENTIFIER LBRACK CONSTANT RBRACK EQUAL expression BAR SEMICOLON
    (51) identifierDeclaration -> . BAR dataType IDENTIFIER EQUAL expression BAR SEMICOLON
    (65) listDec -> . IDENTIFIER EQUAL list SEMICOLON
    (71) unionDec -> . IDENTIFIER EQUAL union SEMICOLON
    (132) ArithmeticExpression -> . LESSTHAN Operand ArithmeticOperator Operand GREATERTHAN
    (70) listEval -> . IDENTIFIER LBRACK CONSTANT RBRACK
    (66) list -> . LBRACK listElem RBRACK
    (72) union -> . LCURLY unionElement RCURLY
    (131) RelationExpression -> . LPAREN Operand RelationOperator Operand RPAREN
    (52) dataType -> . INT
    (53) dataType -> . BOOLEAN
    (54) dataType -> . FLOAT

    END             shift and go to state 24
    READ            shift and go to state 5
    PRINT           shift and go to state 12
    IF              shift and go to state 31
    BAR             shift and go to state 4
    WHILE           shift and go to state 8
    for             shift and go to state 35
    DO              shift and go to state 2
    IDENTIFIER      shift and go to state 21
    TC_INT          shift and go to state 14
    TC_FLOAT        shift and go to state 37
    RETURN          shift and go to state 13
    LESSTHAN        shift and go to state 41
    LBRACK          shift and go to state 40
    LCURLY          shift and go to state 7
    LPAREN          shift and go to state 28
    INT             shift and go to state 36
    BOOLEAN         shift and go to state 18
    FLOAT           shift and go to state 38

    statementTop                   shift and go to state 1
    returnDec                      shift and go to state 3
    unionAdd                       shift and go to state 6
    listOpStatement                shift and go to state 9
    unionKeys                      shift and go to state 10
    listDec                        shift and go to state 11
    typecastToFloat                shift and go to state 15
    IfThenElse                     shift and go to state 16
    union                          shift and go to state 17
    typeCastToInt                  shift and go to state 19
    statement                      shift and go to state 20
    DoWhileLoop                    shift and go to state 33
    FunctionDefinition             shift and go to state 22
    listEval                       shift and go to state 23
    dataType                       shift and go to state 43
    ArithmeticExpression           shift and go to state 25
    RelationExpression             shift and go to state 26
    identifierDeclaration          shift and go to state 27
    declaration                    shift and go to state 29
    ForLoop                        shift and go to state 30
    WhileLoop                      shift and go to state 32
    stringOpStatement              shift and go to state 34
    list                           shift and go to state 39
    unionDec                       shift and go to state 42
    AssignmentHead                 shift and go to state 44
    FunctionCall                   shift and go to state 45
    expression                     shift and go to state 46

state 1

    (0) S' -> statementTop .



state 2

    (91) DoWhileLoop -> DO . COLON Body WHILE Condition SEMICOLON

    COLON           shift and go to state 47


state 3

    (16) statement -> returnDec . statementTop
    (1) statementTop -> . END
    (2) statementTop -> . statement
    (3) statement -> . declaration statementTop
    (4) statement -> . expression statementTop
    (5) statement -> . IfThenElse statementTop
    (6) statement -> . AssignmentHead statementTop
    (7) statement -> . WhileLoop statementTop
    (8) statement -> . ForLoop statementTop
    (9) statement -> . DoWhileLoop statementTop
    (10) statement -> . unionAdd statementTop
    (11) statement -> . unionKeys statementTop
    (12) statement -> . typeCastToInt statementTop
    (13) statement -> . typecastToFloat statementTop
    (14) statement -> . FunctionDefinition statementTop
    (15) statement -> . FunctionCall statementTop
    (16) statement -> . returnDec statementTop
    (17) statement -> . stringOpStatement statementTop
    (18) statement -> . listOpStatement statementTop
    (19) statement -> . READ LPAREN IDENTIFIER RPAREN SEMICOLON statementTop
    (20) statement -> . PRINT LPAREN content RPAREN SEMICOLON statementTop
    (45) declaration -> . identifierDeclaration
    (46) declaration -> . listDec
    (47) declaration -> . unionDec
    (126) expression -> . ArithmeticExpression
    (127) expression -> . listEval
    (128) expression -> . list
    (129) expression -> . union
    (130) expression -> . RelationExpression
    (95) IfThenElse -> . IF Condition COLON Body addElif
    (112) AssignmentHead -> . BAR IDENTIFIER AssignmentOption BAR SEMICOLON
    (85) WhileLoop -> . WHILE Condition COLON Body
    (90) ForLoop -> . for LPAREN AssignmentHead Condition Increment RPAREN Body
    (91) DoWhileLoop -> . DO COLON Body WHILE Condition SEMICOLON
    (76) unionAdd -> . IDENTIFIER LBRACK STRINGVALUE RBRACK EQUAL validListUnionValues SEMICOLON
    (81) unionKeys -> . IDENTIFIER KEYS SEMICOLON
    (83) typeCastToInt -> . TC_INT IDENTIFIER SEMICOLON
    (84) typecastToFloat -> . TC_FLOAT IDENTIFIER SEMICOLON
    (145) FunctionDefinition -> . dataType Function COLON Body
    (150) FunctionCall -> . IDENTIFIER LPAREN FunctionCallParameter RPAREN SEMICOLON
    (154) returnDec -> . RETURN CONSTANT SEMICOLON
    (155) returnDec -> . RETURN IDENTIFIER SEMICOLON
    (156) returnDec -> . RETURN expression SEMICOLON
    (55) stringOpStatement -> . IDENTIFIER stringOp LPAREN STRING RPAREN SEMICOLON
    (56) stringOpStatement -> . IDENTIFIER stringOp LPAREN IDENTIFIER RPAREN SEMICOLON
    (57) listOpStatement -> . IDENTIFIER INSERT LPAREN CONSTANT COMMA validListUnionValues RPAREN SEMICOLON
    (58) listOpStatement -> . IDENTIFIER POP LPAREN listOpChoice RPAREN SEMICOLON
    (48) identifierDeclaration -> . BAR dataType IDENTIFIER BAR SEMICOLON
    (49) identifierDeclaration -> . BAR dataType IDENTIFIER LBRACK CONSTANT RBRACK BAR SEMICOLON
    (50) identifierDeclaration -> . BAR dataType IDENTIFIER LBRACK CONSTANT RBRACK EQUAL expression BAR SEMICOLON
    (51) identifierDeclaration -> . BAR dataType IDENTIFIER EQUAL expression BAR SEMICOLON
    (65) listDec -> . IDENTIFIER EQUAL list SEMICOLON
    (71) unionDec -> . IDENTIFIER EQUAL union SEMICOLON
    (132) ArithmeticExpression -> . LESSTHAN Operand ArithmeticOperator Operand GREATERTHAN
    (70) listEval -> . IDENTIFIER LBRACK CONSTANT RBRACK
    (66) list -> . LBRACK listElem RBRACK
    (72) union -> . LCURLY unionElement RCURLY
    (131) RelationExpression -> . LPAREN Operand RelationOperator Operand RPAREN
    (52) dataType -> . INT
    (53) dataType -> . BOOLEAN
    (54) dataType -> . FLOAT

    END             shift and go to state 24
    READ            shift and go to state 5
    PRINT           shift and go to state 12
    IF              shift and go to state 31
    BAR             shift and go to state 4
    WHILE           shift and go to state 8
    for             shift and go to state 35
    DO              shift and go to state 2
    IDENTIFIER      shift and go to state 21
    TC_INT          shift and go to state 14
    TC_FLOAT        shift and go to state 37
    RETURN          shift and go to state 13
    LESSTHAN        shift and go to state 41
    LBRACK          shift and go to state 40
    LCURLY          shift and go to state 7
    LPAREN          shift and go to state 28
    INT             shift and go to state 36
    BOOLEAN         shift and go to state 18
    FLOAT           shift and go to state 38

    statementTop                   shift and go to state 48
    returnDec                      shift and go to state 3
    unionAdd                       shift and go to state 6
    listOpStatement                shift and go to state 9
    unionKeys                      shift and go to state 10
    listDec                        shift and go to state 11
    typecastToFloat                shift and go to state 15
    IfThenElse                     shift and go to state 16
    union                          shift and go to state 17
    typeCastToInt                  shift and go to state 19
    statement                      shift and go to state 20
    DoWhileLoop                    shift and go to state 33
    FunctionDefinition             shift and go to state 22
    listEval                       shift and go to state 23
    dataType                       shift and go to state 43
    ArithmeticExpression           shift and go to state 25
    RelationExpression             shift and go to state 26
    identifierDeclaration          shift and go to state 27
    declaration                    shift and go to state 29
    ForLoop                        shift and go to state 30
    WhileLoop                      shift and go to state 32
    stringOpStatement              shift and go to state 34
    list                           shift and go to state 39
    unionDec                       shift and go to state 42
    AssignmentHead                 shift and go to state 44
    FunctionCall                   shift and go to state 45
    expression                     shift and go to state 46

state 4

    (112) AssignmentHead -> BAR . IDENTIFIER AssignmentOption BAR SEMICOLON
    (48) identifierDeclaration -> BAR . dataType IDENTIFIER BAR SEMICOLON
    (49) identifierDeclaration -> BAR . dataType IDENTIFIER LBRACK CONSTANT RBRACK BAR SEMICOLON
    (50) identifierDeclaration -> BAR . dataType IDENTIFIER LBRACK CONSTANT RBRACK EQUAL expression BAR SEMICOLON
    (51) identifierDeclaration -> BAR . dataType IDENTIFIER EQUAL expression BAR SEMICOLON
    (52) dataType -> . INT
    (53) dataType -> . BOOLEAN
    (54) dataType -> . FLOAT

    IDENTIFIER      shift and go to state 50
    INT             shift and go to state 36
    BOOLEAN         shift and go to state 18
    FLOAT           shift and go to state 38

    dataType                       shift and go to state 49

state 5

    (19) statement -> READ . LPAREN IDENTIFIER RPAREN SEMICOLON statementTop

    LPAREN          shift and go to state 51


state 6

    (10) statement -> unionAdd . statementTop
    (1) statementTop -> . END
    (2) statementTop -> . statement
    (3) statement -> . declaration statementTop
    (4) statement -> . expression statementTop
    (5) statement -> . IfThenElse statementTop
    (6) statement -> . AssignmentHead statementTop
    (7) statement -> . WhileLoop statementTop
    (8) statement -> . ForLoop statementTop
    (9) statement -> . DoWhileLoop statementTop
    (10) statement -> . unionAdd statementTop
    (11) statement -> . unionKeys statementTop
    (12) statement -> . typeCastToInt statementTop
    (13) statement -> . typecastToFloat statementTop
    (14) statement -> . FunctionDefinition statementTop
    (15) statement -> . FunctionCall statementTop
    (16) statement -> . returnDec statementTop
    (17) statement -> . stringOpStatement statementTop
    (18) statement -> . listOpStatement statementTop
    (19) statement -> . READ LPAREN IDENTIFIER RPAREN SEMICOLON statementTop
    (20) statement -> . PRINT LPAREN content RPAREN SEMICOLON statementTop
    (45) declaration -> . identifierDeclaration
    (46) declaration -> . listDec
    (47) declaration -> . unionDec
    (126) expression -> . ArithmeticExpression
    (127) expression -> . listEval
    (128) expression -> . list
    (129) expression -> . union
    (130) expression -> . RelationExpression
    (95) IfThenElse -> . IF Condition COLON Body addElif
    (112) AssignmentHead -> . BAR IDENTIFIER AssignmentOption BAR SEMICOLON
    (85) WhileLoop -> . WHILE Condition COLON Body
    (90) ForLoop -> . for LPAREN AssignmentHead Condition Increment RPAREN Body
    (91) DoWhileLoop -> . DO COLON Body WHILE Condition SEMICOLON
    (76) unionAdd -> . IDENTIFIER LBRACK STRINGVALUE RBRACK EQUAL validListUnionValues SEMICOLON
    (81) unionKeys -> . IDENTIFIER KEYS SEMICOLON
    (83) typeCastToInt -> . TC_INT IDENTIFIER SEMICOLON
    (84) typecastToFloat -> . TC_FLOAT IDENTIFIER SEMICOLON
    (145) FunctionDefinition -> . dataType Function COLON Body
    (150) FunctionCall -> . IDENTIFIER LPAREN FunctionCallParameter RPAREN SEMICOLON
    (154) returnDec -> . RETURN CONSTANT SEMICOLON
    (155) returnDec -> . RETURN IDENTIFIER SEMICOLON
    (156) returnDec -> . RETURN expression SEMICOLON
    (55) stringOpStatement -> . IDENTIFIER stringOp LPAREN STRING RPAREN SEMICOLON
    (56) stringOpStatement -> . IDENTIFIER stringOp LPAREN IDENTIFIER RPAREN SEMICOLON
    (57) listOpStatement -> . IDENTIFIER INSERT LPAREN CONSTANT COMMA validListUnionValues RPAREN SEMICOLON
    (58) listOpStatement -> . IDENTIFIER POP LPAREN listOpChoice RPAREN SEMICOLON
    (48) identifierDeclaration -> . BAR dataType IDENTIFIER BAR SEMICOLON
    (49) identifierDeclaration -> . BAR dataType IDENTIFIER LBRACK CONSTANT RBRACK BAR SEMICOLON
    (50) identifierDeclaration -> . BAR dataType IDENTIFIER LBRACK CONSTANT RBRACK EQUAL expression BAR SEMICOLON
    (51) identifierDeclaration -> . BAR dataType IDENTIFIER EQUAL expression BAR SEMICOLON
    (65) listDec -> . IDENTIFIER EQUAL list SEMICOLON
    (71) unionDec -> . IDENTIFIER EQUAL union SEMICOLON
    (132) ArithmeticExpression -> . LESSTHAN Operand ArithmeticOperator Operand GREATERTHAN
    (70) listEval -> . IDENTIFIER LBRACK CONSTANT RBRACK
    (66) list -> . LBRACK listElem RBRACK
    (72) union -> . LCURLY unionElement RCURLY
    (131) RelationExpression -> . LPAREN Operand RelationOperator Operand RPAREN
    (52) dataType -> . INT
    (53) dataType -> . BOOLEAN
    (54) dataType -> . FLOAT

    END             shift and go to state 24
    READ            shift and go to state 5
    PRINT           shift and go to state 12
    IF              shift and go to state 31
    BAR             shift and go to state 4
    WHILE           shift and go to state 8
    for             shift and go to state 35
    DO              shift and go to state 2
    IDENTIFIER      shift and go to state 21
    TC_INT          shift and go to state 14
    TC_FLOAT        shift and go to state 37
    RETURN          shift and go to state 13
    LESSTHAN        shift and go to state 41
    LBRACK          shift and go to state 40
    LCURLY          shift and go to state 7
    LPAREN          shift and go to state 28
    INT             shift and go to state 36
    BOOLEAN         shift and go to state 18
    FLOAT           shift and go to state 38

    statementTop                   shift and go to state 52
    returnDec                      shift and go to state 3
    unionAdd                       shift and go to state 6
    listOpStatement                shift and go to state 9
    unionKeys                      shift and go to state 10
    listDec                        shift and go to state 11
    typecastToFloat                shift and go to state 15
    IfThenElse                     shift and go to state 16
    union                          shift and go to state 17
    typeCastToInt                  shift and go to state 19
    statement                      shift and go to state 20
    DoWhileLoop                    shift and go to state 33
    FunctionDefinition             shift and go to state 22
    listEval                       shift and go to state 23
    dataType                       shift and go to state 43
    ArithmeticExpression           shift and go to state 25
    RelationExpression             shift and go to state 26
    identifierDeclaration          shift and go to state 27
    declaration                    shift and go to state 29
    ForLoop                        shift and go to state 30
    WhileLoop                      shift and go to state 32
    stringOpStatement              shift and go to state 34
    list                           shift and go to state 39
    unionDec                       shift and go to state 42
    AssignmentHead                 shift and go to state 44
    FunctionCall                   shift and go to state 45
    expression                     shift and go to state 46

state 7

    (72) union -> LCURLY . unionElement RCURLY
    (73) unionElement -> . STRING EQUAL validListUnionValues
    (74) unionElement -> . STRING EQUAL validListUnionValues COMMA unionElement
    (75) unionElement -> . EMPTY

    STRING          shift and go to state 53
    EMPTY           shift and go to state 55

    unionElement                   shift and go to state 54

state 8

    (85) WhileLoop -> WHILE . Condition COLON Body
    (101) Condition -> . RelationExpression
    (102) Condition -> . LPAREN Condition Compound Condition RPAREN
    (103) Condition -> . LPAREN NOT Condition RPAREN
    (131) RelationExpression -> . LPAREN Operand RelationOperator Operand RPAREN

    LPAREN          shift and go to state 57

    RelationExpression             shift and go to state 56
    Condition                      shift and go to state 58

state 9
